--- a/language/i18n_cs.json
+++ b/language/i18n_cs.json
@@ -3917,7 +3917,7 @@
     "selected_all": "vybráno vše",
     "set_temp_error": "Nastavenou teplotu nelze dosáhnout. Prosím, upravte teplotu vody.",
     "no_device_support_eco_key": "Žádné zařízení není k dispozici, ujistěte se, že vaše zařízení jsou připojena a podporují režim ECO.",
-    "appliance_disconnect_cannot_open_eco": "Zařízení je odpojeno, zkontrolujte, zda jsou povoleny WiFi a dálkové ovládání.",
+    "appliance_disconnect_cannot_open_eco": "Zařízení je odpojeno, zkontrolujte, zda je povoleno Wi-Fi a dálkové ovládání.",
     "power_on_remote_eabled_tips": "K dispozici pouze v případě, že je zařízení zapnuté a je povoleno vzdálené spuštění.",
     "power_on_tips": "K dispozici pouze při zapnutém zařízení.",
     "asko_oven_on_during_on": "ON během používání",
@@ -4149,5 +4149,46 @@
     "CL_DV_HOB_refresh_mode": "Obnovovací režim",
     "hob_induction3_new_tips": "Naučte se, jak připojit své chytré nádobí a procházejte širokou škálu receptů krok za krokem, speciálně vytvořených pro vaření s přesnou teplotou.",
     "CL_DV_OV_added_successfully": "Úspěšně přidáno!",
-    "add_routine": "PŘIDAT RUTINU"
+    "add_routine": "PŘIDAT RUTINU",
+    "CL_DV_PIND_update_blue_tooth": "Ujistěte se, že máte zapnuté bluetooth.",
+    "CL_DV_PIND_accessory_firmware_update": "Aktualizace firmwaru příslušenství",
+    "CL_CF_CS_ble_scan_not_list": "Pokud vaše zařízení není v seznamu, můžete kliknout na 'ZKUSIT ZNOVU' a hledat znovu, nebo klepnout na 'DALŠÍ' pro konfiguraci sítě jiným způsobem.",
+    "CL_CF_CS_ble_scan_have_not_found": "Na bluetooth jsme nenašli žádné zařízení. Můžete kliknout na „ZKUSIT ZNOVU“ a hledat znovu, nebo kliknout na „DALŠÍ“ pro konfiguraci sítě jiným způsobem.",
+    "CL_DV_WM_pump_cleaning": "Čisticí čerpadlo...",
+    "CL_DV_WM_autodoes_tip": "Povolte tuto funkci a vaše zařízení bude během praní chytře dávkovat prací prostředek a aviváž.",
+    "CL_DV_WM_detergent_department_key": "PŘIHRÁDKA NA PRACÍ PROSTŘEDEK",
+    "CL_DV_WM_Dosage_Amount_key": "Dávka Množství",
+    "CL_DV_WM_softener_department_key": "PŘIHRÁDKA NA ZMěkčovač",
+    "CL_DV_WM_auto_does_with_detergent": "Automatické dávkování s detergentem",
+    "CL_DV_WM_same_detergent": "Stejný prací prostředek",
+    "CL_DV_WM_normal_dosage_weight_tip": "Normální dávkování: 4~5 kg hmotnosti oblečení.",
+    "CL_DV_WM_pump_clean_note_1": "Poznámky: Pokud chcete změnit obsah dávkovací součásti, nezapomeňte na to ",
+    "CL_DV_WM_pump_clean_note_2": "nejprve součást očistěte.",
+    "CL_DV_WM_Pump_clean_key": "Čerpadlo čisté",
+    "CL_DV_WM_pump_clean_how_to_use": "Jak používat?",
+    "CL_DV_WM_pump_clean_how_to_use_1": "1. Před aktivací funkce čištění čerpadla vyprázdněte a naplňte přihrádku vodou.",
+    "CL_DV_WM_pump_clean_how_to_use_2": "2. Aktivujte funkci čištění čerpadla ze strany stroje.",
+    "CL_DV_WM_pump_clean_when_to_use": "Kdy použít?",
+    "CL_DV_WM_pump_clean_when_to_use_1": "1.Pokud si přejete vyměnit obsah v přihrádce na aviváž, ujistěte se, že je prázdná, a před dalším použitím spusťte funkci čištění čerpadla. ",
+    "CL_DV_WM_pump_clean_when_to_use_2": "2. Více než půl roku jste čerpadlo nečistili, můžete aktivovat funkci čištění čerpadla.",
+    "CL_DV_WM_standard_auto_does_key": "STANDARDNÍ AUTODÁVKA",
+    "CL_DV_WM_compartment_in_use_key": "PŘIHRÁDKA V POUŽÍVÁNÍ",
+    "CL_CF_CS_oven_g_800_cs_1": "Nastavte zařízení do normálních provozních podmínek.\n Klepněte na ikonu nabídky.",
+    "CL_CF_CS_oven_g_800_cs_2": "Klepněte na ikonu Wi-Fi a podržte ji přibližně 3–6 sekund, dokud nedosáhne písmene „C“ na časové ose.",
+    "CL_CF_CS_oven_g_800_cs_3": "Síť zařízení je nyní otevřena pro připojení po dobu 5 minut.\n Pokračujte kliknutím na NEXT.",
+    "CL_CF_CS_oven_g_800_p_1": "Nastavte zařízení do normálních provozních podmínek.\n Klepněte na ikonu nabídky.",
+    "CL_CF_CS_oven_g_800_p_2": "Klepněte a podržte ikonu Wi-Fi po dobu přibližně 6-9 sekund, dokud nedosáhne „P“ na časové ose.",
+    "CL_CF_CS_oven_g_800_p_3": "Zařízení je nyní připraveno na párování po dobu 3 minut.\n Pokračujte kliknutím na NEXT.",
+    "CL_DV_PIND_update_fail_tip1": "Došlo k neočekávané chybě. Aktualizace firmwaru se nezdařila.",
+    "CL_DV_PIND_update_fail_tip4": "Zkuste prosím znovu aktualizovat své příslušenství.",
+    "CL_DV_PIND_update_fail_tip2": "Při aktualizaci mějte svá zařízení poblíž.",
+    "CL_DV_PIND_update_fail_tip3": "Zkontrolujte připojení bluetooth.",
+    "room_good_content": "Klimatizace tohoto pokoje je dobrá. Optimalizace zatím není potřeba.",
+    "edit_address_title": "UPRAVIT ADRESU",
+    "edit_profile_title": "UPRAVIT UŽIVATELSKÝ PROFIL",
+    "CL_DV_OV_reduce_moisture": "Snižte vlhkost",
+    "air_care_level_tips": "Norma vyhodnocení teploty: Dobrá: 17 < T < 27℃ Normální: 10≤T≤17℃, 27≤T≤30℃ Špatná: T＜10℃ T＞30℃ Norma hodnocení vlhkosti: Dobrá: H < 70 % Normální: 30≤H≤40%, 70≤H≤80% Nekvalitní: V＜30%, H＞80%",
+    "addresses_key": "adresy",
+    "default_address_user": "VÝCHOZÍ ADRESA",
+    "set_default_address_user": "Nastavit jako výchozí adresu"
 }
