--- a/language/i18n_hu.json
+++ b/language/i18n_hu.json
@@ -3917,7 +3917,7 @@
     "selected_all": "mind kiválasztva",
     "set_temp_error": "A beállított hőmérséklet nem érhető el. Kérjük, módosítsa a víz hőmérsékletét.",
     "no_device_support_eco_key": "Nincs elérhető eszköz, kérjük, győződjön meg arról, hogy az eszközök csatlakoztatva vannak és támogatják az ECO módot.",
-    "appliance_disconnect_cannot_open_eco": "Az eszköz le van választva, kérjük, ellenőrizze, hogy a WIFI és a távirányító engedélyezve van-e.",
+    "appliance_disconnect_cannot_open_eco": "Az eszköz le van választva, ellenőrizze, hogy a Wi-Fi és a távirányító engedélyezve van-e.",
     "power_on_remote_eabled_tips": "Csak akkor érhető el, ha az eszköz be van kapcsolva, és engedélyezve van a távoli indítás.",
     "power_on_tips": "Csak akkor érhető el, ha a készülék be van kapcsolva.",
     "asko_oven_on_during_on": "BE használat közben",
@@ -4149,5 +4149,46 @@
     "CL_DV_HOB_refresh_mode": "Frissítés mód",
     "hob_induction3_new_tips": "Tanulja meg, hogyan csatlakoztathatja intelligens edényeit, és böngésszen a lépésenkénti receptek széles skálája között, amelyek kifejezetten a hőmérséklet-precíz főzéshez készültek.",
     "CL_DV_OV_added_successfully": "Sikeresen hozzáadva!",
-    "add_routine": "RUTIN HOZZÁADÁSA"
+    "add_routine": "RUTIN HOZZÁADÁSA",
+    "CL_DV_PIND_update_blue_tooth": "Győződjön meg arról, hogy a Bluetooth be van kapcsolva.",
+    "CL_DV_PIND_accessory_firmware_update": "Tartozék firmware frissítés",
+    "CL_CF_CS_ble_scan_not_list": "Ha eszköze nem szerepel a listában, kattintson az „ÚJRAPRÓBÁLÁS” gombra az újbóli kereséshez, vagy kattintson a „KÖVETKEZŐ” gombra a hálózat más módon történő konfigurálásához.",
+    "CL_CF_CS_ble_scan_have_not_found": "Nem találtunk Bluetooth-eszközt. Kattintson az „ÚJRAPRÓBÁLÁS” gombra az újbóli kereséshez, vagy kattintson a „KÖVETKEZŐ” gombra a hálózat más módon történő konfigurálásához.",
+    "CL_DV_WM_pump_cleaning": "Szivattyú tisztítása...",
+    "CL_DV_WM_autodoes_tip": "Engedélyezze ezt a funkciót, és készüléke okosan adagolja a mosószert és az öblítőt, miközben Ön mos.",
+    "CL_DV_WM_detergent_department_key": "MOSÓSZERREKESZ",
+    "CL_DV_WM_Dosage_Amount_key": "Adagolás mennyisége",
+    "CL_DV_WM_softener_department_key": "LÁGYÍTÓREKESZ",
+    "CL_DV_WM_auto_does_with_detergent": "Automatikus adagolás mosószerrel",
+    "CL_DV_WM_same_detergent": "Ugyanaz a mosószer",
+    "CL_DV_WM_normal_dosage_weight_tip": "Normál adagolás: 4-5 kg ​​ruha súlya.",
+    "CL_DV_WM_pump_clean_note_1": "Megjegyzések: Ha módosítani szeretné az adagoló komponens tartalmát, ne feledje ",
+    "CL_DV_WM_pump_clean_note_2": "először tisztítsa meg az alkatrészt.",
+    "CL_DV_WM_Pump_clean_key": "Szivattyú tiszta",
+    "CL_DV_WM_pump_clean_how_to_use": "Hogyan kell használni?",
+    "CL_DV_WM_pump_clean_how_to_use_1": "1. Ürítse ki és töltse fel vízzel a rekeszt, mielőtt bekapcsolja a szivattyútisztítás funkciót.",
+    "CL_DV_WM_pump_clean_how_to_use_2": "2. Aktiválja a szivattyú tisztítási funkciót a gép oldaláról.",
+    "CL_DV_WM_pump_clean_when_to_use": "Mikor kell használni?",
+    "CL_DV_WM_pump_clean_when_to_use_1": "1. Ha módosítani szeretné a „Lágyító” rekesz tartalmát, győződjön meg arról, hogy az üres, és a következő használat előtt futtassa a szivattyú tisztítási funkciót. ",
+    "CL_DV_WM_pump_clean_when_to_use_2": "2. Több mint fél éve nem tisztította a szivattyút, aktiválhatja a szivattyú tisztítási funkciót.",
+    "CL_DV_WM_standard_auto_does_key": "STANDARD AUTODÓZIS",
+    "CL_DV_WM_compartment_in_use_key": "REKESZ HASZNÁLATBAN",
+    "CL_CF_CS_oven_g_800_cs_1": "Állítsa a készüléket normál működési feltételekre.\n Koppintson a menü ikonra.",
+    "CL_CF_CS_oven_g_800_cs_2": "Érintse meg és tartsa lenyomva a Wi-Fi ikont körülbelül 3-6 másodpercig, amíg el nem éri a „C” jelet az idővonalon.",
+    "CL_CF_CS_oven_g_800_cs_3": "Az eszköz hálózata most már 5 percig nyitva áll a csatlakozásra.\n A folytatáshoz kattintson a KÖVETKEZŐ gombra.",
+    "CL_CF_CS_oven_g_800_p_1": "Állítsa a készüléket normál működési feltételekre.\n Koppintson a menü ikonra.",
+    "CL_CF_CS_oven_g_800_p_2": "Érintse meg és tartsa lenyomva a Wi-Fi ikont körülbelül 6-9 másodpercig, amíg el nem éri a „P” jelet az idővonalon.",
+    "CL_CF_CS_oven_g_800_p_3": "A készülék most 3 percig készen áll a párosításra.\n A folytatáshoz kattintson a KÖVETKEZŐ gombra.",
+    "CL_DV_PIND_update_fail_tip1": "Váratlan hiba történt. A firmware frissítés sikertelen volt.",
+    "CL_DV_PIND_update_fail_tip4": "Kérjük, próbálja újra a tartozék frissítését.",
+    "CL_DV_PIND_update_fail_tip2": "Frissítés közben tartsa közel eszközeit.",
+    "CL_DV_PIND_update_fail_tip3": "Ellenőrizze a Bluetooth-kapcsolatot.",
+    "room_good_content": "A szoba légkondicionálása jó. Optimalizálásra egyelőre nincs szükség.",
+    "edit_address_title": "CÍM SZERKESZTÉSE",
+    "edit_profile_title": "FELHASZNÁLÓI PROFIL SZERKESZTÉSE",
+    "CL_DV_OV_reduce_moisture": "Csökkentse a nedvességet",
+    "air_care_level_tips": "Hőmérséklet értékelési szabvány: Jó: 17 < T < 27 ℃ Normál: 10≤T≤17℃, 27≤T≤30℃ Nem jó: T＜10℃ T＞30℃ Páratartalom értékelési szabvány: Jó: H < 70% Normál: 30≤H≤40%, 70≤H≤80% Nem jó: H＜30%, H＞80%",
+    "addresses_key": "címeket",
+    "default_address_user": "ALAPÉRTELMEZETT CÍM",
+    "set_default_address_user": "Beállítás alapértelmezett címként"
 }
