--- a/language/i18n_ms.json
+++ b/language/i18n_ms.json
@@ -3917,7 +3917,7 @@
     "selected_all": "pilih semua",
     "set_temp_error": "Suhu yang ditetapkan tidak dapat dicapai. Sila ubah suhu saluran air.",
     "no_device_support_eco_key": "Tiada peranti tersedia, sila pastikan peranti anda disambungkan dan menyokong mod ECO.",
-    "appliance_disconnect_cannot_open_eco": "Peranti telah terputus, sila periksa jika WIFI dan Kawalan Jauh diaktifkan.",
+    "appliance_disconnect_cannot_open_eco": "Peranti diputuskan sambungan, sila semak sama ada Wi-Fi dan Alat Kawalan Jauh didayakan.",
     "power_on_remote_eabled_tips": "Hanya tersedia apabila peranti dihidupkan dan mula jauh didayakan.",
     "power_on_tips": "Hanya tersedia apabila peranti dihidupkan.",
     "asko_oven_on_during_on": "HIDUP semasa digunakan",
@@ -4149,5 +4149,46 @@
     "CL_DV_HOB_refresh_mode": "Mod muat semula",
     "hob_induction3_new_tips": "Ketahui cara menyambungkan alat memasak pintar anda dan semak imbas pelbagai resipi langkah demi langkah, yang dibuat khusus untuk memasak dengan tepat suhu.",
     "CL_DV_OV_added_successfully": "Berjaya ditambahkan!",
-    "add_routine": "TAMBAH RUTIN"
+    "add_routine": "TAMBAH RUTIN",
+    "CL_DV_PIND_update_blue_tooth": "Pastikan bluetooth anda dihidupkan.",
+    "CL_DV_PIND_accessory_firmware_update": "Kemas kini perisian tegar aksesori",
+    "CL_CF_CS_ble_scan_not_list": "Jika peranti anda tidak disenaraikan, anda boleh mengklik 'CUBA LAGI' untuk mencari semula atau klik 'SETERUSNYA' untuk mengkonfigurasi rangkaian dengan cara lain.",
+    "CL_CF_CS_ble_scan_have_not_found": "Kami tidak menemui sebarang peranti pada bluetooth. Anda boleh mengklik 'CUBA LAGI' untuk mencari semula, atau klik 'SETERUSNYA' untuk mengkonfigurasi rangkaian dengan cara lain.",
+    "CL_DV_WM_pump_cleaning": "Pam pembersihan...",
+    "CL_DV_WM_autodoes_tip": "Dayakan ciri ini dan peranti anda akan mengeluarkan detergen dan pelembut fabrik dengan bijak semasa anda mencuci pakaian anda.",
+    "CL_DV_WM_detergent_department_key": "KOMPARTMEN DETERGEN",
+    "CL_DV_WM_Dosage_Amount_key": "Jumlah Dos",
+    "CL_DV_WM_softener_department_key": "KOMPARTMEN PELEMBUT",
+    "CL_DV_WM_auto_does_with_detergent": "Autodose Dengan Detergen",
+    "CL_DV_WM_same_detergent": "Detergen yang sama",
+    "CL_DV_WM_normal_dosage_weight_tip": "Dos biasa: 4~5kg berat pakaian.",
+    "CL_DV_WM_pump_clean_note_1": "Nota: Jika anda ingin menukar kandungan komponen pendispensan, sila ingat untuk ",
+    "CL_DV_WM_pump_clean_note_2": "bersihkan komponen terlebih dahulu.",
+    "CL_DV_WM_Pump_clean_key": "Pam bersih",
+    "CL_DV_WM_pump_clean_how_to_use": "Bagaimana nak guna?",
+    "CL_DV_WM_pump_clean_how_to_use_1": "1.Kosongkan dan isi petak dengan air sebelum mengaktifkan fungsi pembersihan pam.",
+    "CL_DV_WM_pump_clean_how_to_use_2": "2. Aktifkan fungsi pembersihan pam dari bahagian mesin.",
+    "CL_DV_WM_pump_clean_when_to_use": "Bila nak guna?",
+    "CL_DV_WM_pump_clean_when_to_use_1": "1. Jika anda ingin menukar kandungan dalam petak \"Pelembut\", sila pastikan ia kosong dan jalankan fungsi pembersihan pam sebelum penggunaan seterusnya. ",
+    "CL_DV_WM_pump_clean_when_to_use_2": "2. Lebih daripada setengah tahun anda belum membersihkan Pam, anda boleh mengaktifkan fungsi pembersihan pam.",
+    "CL_DV_WM_standard_auto_does_key": "AUTODOS STANDARD",
+    "CL_DV_WM_compartment_in_use_key": "KOMPARTMEN DIGUNAKAN",
+    "CL_CF_CS_oven_g_800_cs_1": "Tetapkan peranti kepada keadaan operasi biasa.\n Ketik ikon menu.",
+    "CL_CF_CS_oven_g_800_cs_2": "Ketik dan tahan ikon Wi-Fi selama lebih kurang 3-6 saat sehingga ia mencapai \"C\" pada garis masa.",
+    "CL_CF_CS_oven_g_800_cs_3": "Rangkaian peranti kini dibuka untuk sambungan selama 5 minit.\n Klik SETERUSNYA untuk meneruskan.",
+    "CL_CF_CS_oven_g_800_p_1": "Tetapkan peranti kepada keadaan operasi biasa.\n Ketik ikon menu.",
+    "CL_CF_CS_oven_g_800_p_2": "Ketik dan tahan ikon Wi-Fi selama lebih kurang 6-9 saat sehingga ia mencapai \"P\" pada garis masa.",
+    "CL_CF_CS_oven_g_800_p_3": "Peranti kini sedia untuk berpasangan selama 3 minit.\n Klik SETERUSNYA untuk meneruskan.",
+    "CL_DV_PIND_update_fail_tip1": "Ralat yang tidak dijangka berlaku. Kemas kini perisian tegar tidak berjaya.",
+    "CL_DV_PIND_update_fail_tip4": "Sila cuba lagi untuk mengemas kini aksesori anda.",
+    "CL_DV_PIND_update_fail_tip2": "Pastikan peranti anda berdekatan semasa mengemas kini.",
+    "CL_DV_PIND_update_fail_tip3": "Semak sambungan bluetooth anda.",
+    "room_good_content": "Penghawa dingin bilik ini baik. Pengoptimuman tidak diperlukan buat masa ini.",
+    "edit_address_title": "EDIT ALAMAT",
+    "edit_profile_title": "EDIT PROFIL PENGGUNA",
+    "CL_DV_OV_reduce_moisture": "Kurangkan kelembapan",
+    "air_care_level_tips": "Standard penilaian suhu: Baik: 17 < T < 27℃ Normal: 10≤T≤17℃, 27≤T≤30℃ Tidak baik: T＜10℃ T＞30℃ Standard penilaian kelembapan: Baik: H < 70% Normal: 30≤H≤40%, 70≤H≤80% Tidak baik: H＜30%, H＞80%",
+    "addresses_key": "alamat",
+    "default_address_user": "ALAMAT LALAI",
+    "set_default_address_user": "Tetapkan sebagai alamat lalai"
 }
