--- a/language/i18n_nb.json
+++ b/language/i18n_nb.json
@@ -3917,7 +3917,7 @@
     "selected_all": "valgt alle",
     "set_temp_error": "Den innstilte temperaturen kan ikke oppnås. Vennligst endre vanntemperaturen.",
     "no_device_support_eco_key": "Ingen enhet er tilgjengelig, vennligst sørg for at enhetene dine er koblet til og støtter ECO-modus.",
-    "appliance_disconnect_cannot_open_eco": "Enheten er frakoblet, vennligst sjekk om WiFi og fjernkontroll er aktivert.",
+    "appliance_disconnect_cannot_open_eco": "Enheten er frakoblet, vennligst sjekk om Wi-Fi og fjernkontroll er aktivert.",
     "power_on_remote_eabled_tips": "Kun tilgjengelig når enheten er slått på og fjernstart er aktivert.",
     "power_on_tips": "Kun tilgjengelig når enheten er slått på.",
     "asko_oven_on_during_on": "PÅ under bruk",
@@ -4149,5 +4149,46 @@
     "CL_DV_HOB_refresh_mode": "Oppdateringsmodus",
     "hob_induction3_new_tips": "Lær hvordan du kobler til det smarte kokekaret ditt og bla gjennom et bredt spekter av trinnvise oppskrifter, spesielt laget for nøyaktig temperaturtilberedning.",
     "CL_DV_OV_added_successfully": "Lagt til!",
-    "add_routine": "LEGG TIL RUTINE"
+    "add_routine": "LEGG TIL RUTINE",
+    "CL_DV_PIND_update_blue_tooth": "Sørg for at Bluetooth er slått på.",
+    "CL_DV_PIND_accessory_firmware_update": "Oppdatering av tilbehørsfastvare",
+    "CL_CF_CS_ble_scan_not_list": "Hvis enheten din ikke er oppført, kan du klikke \"PRØV IGJEN\" for å søke på nytt, eller klikk \"NESTE\" for å konfigurere nettverket på en annen måte.",
+    "CL_CF_CS_ble_scan_have_not_found": "Vi har ikke funnet noen enhet på bluetooth. Du kan klikke \"PRØV IGJEN\" for å søke på nytt, eller klikk \"NESTE\" for å konfigurere nettverket på en annen måte.",
+    "CL_DV_WM_pump_cleaning": "Rengjør pumpen...",
+    "CL_DV_WM_autodoes_tip": "Aktiver denne funksjonen, og enheten vil på en smart måte dispensere vaskemiddel og tøymykner mens du vasker.",
+    "CL_DV_WM_detergent_department_key": "VASKEMIDDELROM",
+    "CL_DV_WM_Dosage_Amount_key": "Doseringsmengde",
+    "CL_DV_WM_softener_department_key": "MYKKERROM",
+    "CL_DV_WM_auto_does_with_detergent": "Autodoser med vaskemiddel",
+    "CL_DV_WM_same_detergent": "Samme vaskemiddel",
+    "CL_DV_WM_normal_dosage_weight_tip": "Normal dosering: 4~5 kg klesvekt.",
+    "CL_DV_WM_pump_clean_note_1": "Merknader: Hvis du ønsker å endre innholdet i dispenseringskomponenten, må du huske å gjøre det ",
+    "CL_DV_WM_pump_clean_note_2": "rengjør komponenten først.",
+    "CL_DV_WM_Pump_clean_key": "Pumpe ren",
+    "CL_DV_WM_pump_clean_how_to_use": "Hvordan bruke?",
+    "CL_DV_WM_pump_clean_how_to_use_1": "1.Tøm og fyll kammeret med vann før du aktiverer pump clean-funksjonen.",
+    "CL_DV_WM_pump_clean_how_to_use_2": "2. Aktiver pumpens rengjøringsfunksjon fra maskinsiden.",
+    "CL_DV_WM_pump_clean_when_to_use": "Når skal du bruke?",
+    "CL_DV_WM_pump_clean_when_to_use_1": "1. Hvis du ønsker å endre innholdet i \"Mykner\"-rommet, sørg for at det er tomt og kjører pumpenes funksjon før neste bruk. ",
+    "CL_DV_WM_pump_clean_when_to_use_2": "2. Mer enn et halvt år du ikke har renset pumpen, kan du aktivere pumpens rensefunksjon.",
+    "CL_DV_WM_standard_auto_does_key": "STANDARD AUTODOSE",
+    "CL_DV_WM_compartment_in_use_key": "LUK I BRUK",
+    "CL_CF_CS_oven_g_800_cs_1": "Sett enheten til normale driftsforhold.\n Trykk på menyikonet.",
+    "CL_CF_CS_oven_g_800_cs_2": "Trykk og hold Wi-Fi-ikonet i omtrent 3-6 sekunder til det når \"C\" på tidslinjen.",
+    "CL_CF_CS_oven_g_800_cs_3": "Enhetsnettverket er nå åpent for tilkobling i 5 minutter.\n Klikk NESTE for å fortsette.",
+    "CL_CF_CS_oven_g_800_p_1": "Sett enheten til normale driftsforhold.\n Trykk på menyikonet.",
+    "CL_CF_CS_oven_g_800_p_2": "Trykk og hold Wi-Fi-ikonet i omtrent 6-9 sekunder til det når \"P\" på tidslinjen.",
+    "CL_CF_CS_oven_g_800_p_3": "Enheten er nå klar for sammenkobling i 3 minutter.\n Klikk NESTE for å fortsette.",
+    "CL_DV_PIND_update_fail_tip1": "Det oppstod en uventet feil. Fastvareoppdateringen mislyktes.",
+    "CL_DV_PIND_update_fail_tip4": "Prøv igjen for å oppdatere tilbehøret ditt.",
+    "CL_DV_PIND_update_fail_tip2": "Hold enhetene dine i nærheten mens du oppdaterer.",
+    "CL_DV_PIND_update_fail_tip3": "Sjekk bluetooth-tilkoblingen din.",
+    "room_good_content": "Dette rommet har god klimaanlegg. Optimalisering er ikke nødvendig foreløpig.",
+    "edit_address_title": "REDIGER ADRESSE",
+    "edit_profile_title": "REDIGER BRUKERPROFIL",
+    "CL_DV_OV_reduce_moisture": "Reduser fuktighet",
+    "air_care_level_tips": "Temperaturevalueringsstandard: God: 17 < T < 27℃ Normal: 10≤T≤17℃, 27≤T≤30℃ Ikke bra: T＜10℃ T＞30℃ Fuktighetsevalueringsstandard: God: H < 70 % Normal: 30≤H≤40 %, 70≤H≤80 % Ikke bra: H＜30 %, H＞80 %",
+    "addresses_key": "adresser",
+    "default_address_user": "STANDARDADRESSE",
+    "set_default_address_user": "Angi som standardadresse"
 }
