--- a/language/i18n_sl.json
+++ b/language/i18n_sl.json
@@ -2608,7 +2608,7 @@
     "light_switch": "STIKALO ZA LUČ",
     "modes_usage": "Uporaba načinov",
     "asko_wine_statistic_des": "Ponuja vpogled v klimatsko kontrolo v vaši omarici. Lahko vidite temperaturo, vlažnost in vibracije za več časovnih obdobij.",
-    "asko_wine_lock_des": "Z zaklepanjem ključa onemogočite zaslon na dotik. Prav tako lahko vklopite obvestila o vratih in alarmna vrata.",
+    "asko_wine_lock_des": "Z Key Lock onemogočite zaslon na dotik. Vklopite lahko tudi obvestila o vratih in alarm za vrata.",
     "asko_light_mode_des": "Zmanjšajte svetlost zaslona in/ali osvetlitev med načrtovanimi nočnimi urami.",
     "asko_wine_eco_des": "Pomaga zmanjšati porabo energije in prihraniti elektriko.",
     "wine_inventory_search_empty": "Vsebine ni bilo mogoče najti.",
@@ -3917,7 +3917,7 @@
     "selected_all": "izbrano vse",
     "set_temp_error": "Nastavljena temperatura ni dosegljiva. Prosimo, spremenite temperaturo vodne poti.",
     "no_device_support_eco_key": "Naprava ni na voljo, preverite, ali so vaše naprave povezane in podpirajo način ECO.",
-    "appliance_disconnect_cannot_open_eco": "Naprava je prekinjena, preverite, ali sta Wi-Fi in Remote Control omogočena.",
+    "appliance_disconnect_cannot_open_eco": "Naprava je prekinjena, preverite, ali sta Wi-Fi in daljinski upravljalnik omogočena.",
     "power_on_remote_eabled_tips": "Na voljo samo, ko je naprava vklopljena in je omogočen daljinski zagon.",
     "power_on_tips": "Na voljo samo, ko je naprava vklopljena.",
     "asko_oven_on_during_on": "Vklopljeno med uporabo",
@@ -4149,5 +4149,46 @@
     "CL_DV_HOB_refresh_mode": "Način osveževanja",
     "hob_induction3_new_tips": "Naučite se povezati vašo pametno kuhinjsko posodo in pobrskajte po širokem naboru receptov po korakih, izdelanih posebej za kuhanje z natančno temperaturo.",
     "CL_DV_OV_added_successfully": "Uspešno dodano!",
-    "add_routine": "DODAJ RUTINO"
+    "add_routine": "DODAJ RUTINO",
+    "CL_DV_PIND_update_blue_tooth": "Preverite, ali je vaš bluetooth vklopljen.",
+    "CL_DV_PIND_accessory_firmware_update": "Posodobitev vdelane programske opreme dodatne opreme",
+    "CL_CF_CS_ble_scan_not_list": "Če vaše naprave ni na seznamu, lahko kliknete »POSKUSI ZNOVA« za ponovno iskanje ali kliknete »NAPREJ«, da konfigurirate omrežje na drug način.",
+    "CL_CF_CS_ble_scan_have_not_found": "Nismo našli nobene naprave z bluetoothom. Kliknite »POSKUSI ZNOVA« za ponovno iskanje ali kliknite »NAPREJ« za drugačno konfiguracijo omrežja.",
+    "CL_DV_WM_pump_cleaning": "Črpalka za čiščenje ...",
+    "CL_DV_WM_autodoes_tip": "Omogočite to funkcijo in vaša naprava bo pametno dozirala detergent in mehčalec med pranjem perila.",
+    "CL_DV_WM_detergent_department_key": "PREDELEK ZA DETERGENT",
+    "CL_DV_WM_Dosage_Amount_key": "Količina odmerka",
+    "CL_DV_WM_softener_department_key": "PREDELEK ZA MEHČALEC",
+    "CL_DV_WM_auto_does_with_detergent": "Avtodoziranje z detergentom",
+    "CL_DV_WM_same_detergent": "Isti detergent",
+    "CL_DV_WM_normal_dosage_weight_tip": "Običajni odmerek: 4~5 kg teže oblačil.",
+    "CL_DV_WM_pump_clean_note_1": "Opombe: Če želite spremeniti vsebino dozirne komponente, tega ne pozabite ",
+    "CL_DV_WM_pump_clean_note_2": "najprej očistite komponento.",
+    "CL_DV_WM_Pump_clean_key": "Črpalka čista",
+    "CL_DV_WM_pump_clean_how_to_use": "Kako uporabljati?",
+    "CL_DV_WM_pump_clean_how_to_use_1": "1. Izpraznite in napolnite predel z vodo, preden aktivirate funkcijo čiščenja črpalke.",
+    "CL_DV_WM_pump_clean_how_to_use_2": "2. Aktivirajte funkcijo čiščenja črpalke s strani stroja.",
+    "CL_DV_WM_pump_clean_when_to_use": "Kdaj uporabiti?",
+    "CL_DV_WM_pump_clean_when_to_use_1": "1. Če želite zamenjati vsebino predelka za \"mehčalec\", se prepričajte, da je prazen, in pred naslednjo uporabo zaženite funkcijo čiščenja črpalke. ",
+    "CL_DV_WM_pump_clean_when_to_use_2": "2. Več kot pol leta niste očistili črpalke, lahko aktivirate funkcijo čiščenja črpalke.",
+    "CL_DV_WM_standard_auto_does_key": "STANDARDNA AVTODOZA",
+    "CL_DV_WM_compartment_in_use_key": "PREDAL V UPORABI",
+    "CL_CF_CS_oven_g_800_cs_1": "Napravo nastavite na običajne pogoje delovanja.\n Tapnite ikono menija.",
+    "CL_CF_CS_oven_g_800_cs_2": "Tapnite ikono Wi-Fi in jo držite približno 3-6 sekund, dokler ne doseže \"C\" na časovni premici.",
+    "CL_CF_CS_oven_g_800_cs_3": "Omrežje naprave je zdaj odprto za povezavo 5 minut.\n Za nadaljevanje kliknite NAPREJ.",
+    "CL_CF_CS_oven_g_800_p_1": "Napravo nastavite na običajne pogoje delovanja.\n Tapnite ikono menija.",
+    "CL_CF_CS_oven_g_800_p_2": "Tapnite ikono Wi-Fi in jo držite približno 6–9 sekund, dokler ne doseže črke »P« na časovnici.",
+    "CL_CF_CS_oven_g_800_p_3": "Naprava je zdaj pripravljena za seznanjanje 3 minute.\n Za nadaljevanje kliknite NAPREJ.",
+    "CL_DV_PIND_update_fail_tip1": "Prišlo je do nepričakovane napake. Posodobitev vdelane programske opreme ni bila uspešna.",
+    "CL_DV_PIND_update_fail_tip4": "Prosimo, poskusite znova posodobiti svojo dodatno opremo.",
+    "CL_DV_PIND_update_fail_tip2": "Med posodabljanjem imejte svoje naprave blizu.",
+    "CL_DV_PIND_update_fail_tip3": "Preverite povezavo bluetooth.",
+    "room_good_content": "Klimatska naprava v tej sobi je dobra. Optimizacija zaenkrat ni potrebna.",
+    "edit_address_title": "UREDI NASLOV",
+    "edit_profile_title": "UREDI UPORABNIŠKI PROFIL",
+    "CL_DV_OV_reduce_moisture": "Zmanjšajte vlago",
+    "air_care_level_tips": "Standard vrednotenja temperature: Dobro: 17 < T < 27℃ Normalno: 10≤T≤17℃, 27≤T≤30℃ Slabo: T<10℃ T＞30℃ Standard vrednotenja vlažnosti: Dobro: H < 70 % Normalno: 30≤H≤40%, 70≤H≤80% Ni dobro: H<30%, H>80%",
+    "addresses_key": "naslovi",
+    "default_address_user": "PRIVZETI NASLOV",
+    "set_default_address_user": "Nastavi kot privzeti naslov"
 }
