--- a/language/i18n_el.json
+++ b/language/i18n_el.json
@@ -3917,7 +3917,7 @@
     "selected_all": "επιλέχθηκαν όλα",
     "set_temp_error": "Η καθορισμένη θερμοκρασία δεν μπορεί να επιτευχθεί. Παρακαλώ τροποποιήστε τη θερμοκρασία του νερού.",
     "no_device_support_eco_key": "Δεν υπάρχει διαθέσιμη συσκευή, βεβαιωθείτε ότι οι συσκευές σας είναι συνδεδεμένες και υποστηρίζουν τη λειτουργία ECO.",
-    "appliance_disconnect_cannot_open_eco": "Η συσκευή είναι αποσυνδεδεμένη, παρακαλώ ελέγξτε αν είναι ενεργοποιημένα το WiFi και το τηλεχειριστήριο.",
+    "appliance_disconnect_cannot_open_eco": "Η συσκευή είναι αποσυνδεδεμένη, ελέγξτε εάν το Wi-Fi και το Τηλεχειριστήριο είναι ενεργοποιημένα.",
     "power_on_remote_eabled_tips": "Διατίθεται μόνο όταν η συσκευή είναι ενεργοποιημένη και η απομακρυσμένη εκκίνηση είναι ενεργοποιημένη.",
     "power_on_tips": "Διατίθεται μόνο όταν η συσκευή είναι ενεργοποιημένη.",
     "asko_oven_on_during_on": "ON κατά τη χρήση",
@@ -4149,5 +4149,46 @@
     "CL_DV_HOB_refresh_mode": "Λειτουργία ανανέωσης",
     "hob_induction3_new_tips": "Μάθετε πώς να συνδέετε τα έξυπνα μαγειρικά σας σκεύη και περιηγηθείτε σε μια ευρεία γκάμα συνταγών βήμα προς βήμα, ειδικά σχεδιασμένες για μαγείρεμα με ακρίβεια θερμοκρασίας.",
     "CL_DV_OV_added_successfully": "Προστέθηκε με επιτυχία!",
-    "add_routine": "ΠΡΟΣΘΗΚΗ ΡΟΥΤΙΝΗΣ"
+    "add_routine": "ΠΡΟΣΘΗΚΗ ΡΟΥΤΙΝΗΣ",
+    "CL_DV_PIND_update_blue_tooth": "Βεβαιωθείτε ότι το bluetooth είναι ενεργοποιημένο.",
+    "CL_DV_PIND_accessory_firmware_update": "Ενημέρωση υλικολογισμικού αξεσουάρ",
+    "CL_CF_CS_ble_scan_not_list": "Εάν η συσκευή σας δεν εμφανίζεται στη λίστα, μπορείτε να κάνετε κλικ στο «ΠΡΟΣΠΑΘΗΣΤΕ ΞΑΝΑ» για αναζήτηση ξανά ή να κάνετε κλικ στο «ΕΠΟΜΕΝΟ» για να διαμορφώσετε το δίκτυο με άλλο τρόπο.",
+    "CL_CF_CS_ble_scan_have_not_found": "Δεν βρήκαμε καμία συσκευή στο bluetooth. Μπορείτε να κάνετε κλικ στο «ΠΡΟΣΠΑΘΗΣΤΕ ΞΑΝΑ» για αναζήτηση ξανά ή να κάνετε κλικ στο «ΕΠΟΜΕΝΟ» για να διαμορφώσετε το δίκτυο με άλλο τρόπο.",
+    "CL_DV_WM_pump_cleaning": "Αντλία καθαρισμού...",
+    "CL_DV_WM_autodoes_tip": "Ενεργοποιήστε αυτήν τη λειτουργία και η συσκευή σας θα διανέμει έξυπνα απορρυπαντικό και μαλακτικό ενώ πλένετε τα ρούχα σας.",
+    "CL_DV_WM_detergent_department_key": "ΘΗΚΗ ΑΠΟΡΡΥΠΑΝΤΙΚΟΥ",
+    "CL_DV_WM_Dosage_Amount_key": "Ποσότητα Δοσολογίας",
+    "CL_DV_WM_softener_department_key": "ΘΕΡΜΑ ΜΑΛΑΚΤΙΚΟ",
+    "CL_DV_WM_auto_does_with_detergent": "Αυτόματη δόση με απορρυπαντικό",
+    "CL_DV_WM_same_detergent": "Το ίδιο απορρυπαντικό",
+    "CL_DV_WM_normal_dosage_weight_tip": "Κανονική δοσολογία: 4~5 κιλά βάρος ρούχων.",
+    "CL_DV_WM_pump_clean_note_1": "Σημειώσεις: Εάν θέλετε να αλλάξετε το περιεχόμενο του εξαρτήματος διανομής, θυμηθείτε να το κάνετε ",
+    "CL_DV_WM_pump_clean_note_2": "καθαρίστε πρώτα το εξάρτημα.",
+    "CL_DV_WM_Pump_clean_key": "Καθαρίστε την αντλία",
+    "CL_DV_WM_pump_clean_how_to_use": "Πώς να χρησιμοποιήσετε;",
+    "CL_DV_WM_pump_clean_how_to_use_1": "1. Αδειάστε και γεμίστε τη θήκη με νερό πριν ενεργοποιήσετε τη λειτουργία καθαρισμού της αντλίας.",
+    "CL_DV_WM_pump_clean_how_to_use_2": "2.Ενεργοποιήστε τη λειτουργία καθαρισμού της αντλίας από την πλευρά του μηχανήματος.",
+    "CL_DV_WM_pump_clean_when_to_use": "Πότε να χρησιμοποιήσετε;",
+    "CL_DV_WM_pump_clean_when_to_use_1": "1.Εάν θέλετε να αλλάξετε τα περιεχόμενα στο διαμέρισμα «Μαλακτικό», βεβαιωθείτε ότι είναι άδειο και εκτελέστε τη λειτουργία καθαρισμού της αντλίας πριν από την επόμενη χρήση. ",
+    "CL_DV_WM_pump_clean_when_to_use_2": "2. Πάνω από μισό χρόνο δεν έχετε καθαρίσει την αντλία, μπορείτε να ενεργοποιήσετε τη λειτουργία καθαρισμού της αντλίας.",
+    "CL_DV_WM_standard_auto_does_key": "ΤΥΠΙΚΗ ΑΥΤΟΔΟΣΗ",
+    "CL_DV_WM_compartment_in_use_key": "ΔΙΑΜΕΡΙΣΜΑ ΣΕ ΧΡΗΣΗ",
+    "CL_CF_CS_oven_g_800_cs_1": "Ρυθμίστε τη συσκευή σε κανονικές συνθήκες λειτουργίας.\n Πατήστε το εικονίδιο μενού.",
+    "CL_CF_CS_oven_g_800_cs_2": "Πατήστε παρατεταμένα το εικονίδιο Wi-Fi για περίπου 3-6 δευτερόλεπτα μέχρι να φτάσει στο \"C\" στη γραμμή χρόνου.",
+    "CL_CF_CS_oven_g_800_cs_3": "Το δίκτυο της συσκευής είναι πλέον ανοιχτό για σύνδεση για 5 λεπτά.\n Κάντε κλικ στο ΕΠΟΜΕΝΟ για να συνεχίσετε.",
+    "CL_CF_CS_oven_g_800_p_1": "Ρυθμίστε τη συσκευή σε κανονικές συνθήκες λειτουργίας.\n Πατήστε το εικονίδιο μενού.",
+    "CL_CF_CS_oven_g_800_p_2": "Πατήστε παρατεταμένα το εικονίδιο Wi-Fi για περίπου 6-9 δευτερόλεπτα μέχρι να φτάσει στο \"P\" στη γραμμή χρόνου.",
+    "CL_CF_CS_oven_g_800_p_3": "Η συσκευή είναι τώρα έτοιμη για σύζευξη για 3 λεπτά.\n Κάντε κλικ στο ΕΠΟΜΕΝΟ για να συνεχίσετε.",
+    "CL_DV_PIND_update_fail_tip1": "Παρουσιάστηκε απροσδόκητο σφάλμα. Η ενημέρωση υλικολογισμικού ήταν ανεπιτυχής.",
+    "CL_DV_PIND_update_fail_tip4": "Δοκιμάστε ξανά για να ενημερώσετε το αξεσουάρ σας.",
+    "CL_DV_PIND_update_fail_tip2": "Κρατήστε τις συσκευές σας κοντά κατά την ενημέρωση.",
+    "CL_DV_PIND_update_fail_tip3": "Ελέγξτε τη σύνδεσή σας στο bluetooth.",
+    "room_good_content": "Ο κλιματισμός αυτού του δωματίου είναι καλός. Η βελτιστοποίηση δεν χρειάζεται προς το παρόν.",
+    "edit_address_title": "ΕΠΕΞΕΡΓΑΣΙΑ ΔΙΕΥΘΥΝΣΗ",
+    "edit_profile_title": "ΕΠΕΞΕΡΓΑΣΙΑ ΠΡΟΦΙΛ ΧΡΗΣΤΗ",
+    "CL_DV_OV_reduce_moisture": "Μειώστε την υγρασία",
+    "air_care_level_tips": "Πρότυπο αξιολόγησης θερμοκρασίας: Καλό: 17 < T < 27℃ Κανονικό: 10≤T≤17℃, 27≤T≤30℃ Όχι καλό: T＜10℃ T＞30℃ Πρότυπο αξιολόγησης υγρασίας: Καλό: H < 70% Κανονικό: 30≤H≤40%, 70≤H≤80% Δεν είναι καλό: H＜30%, H＞80%",
+    "addresses_key": "διευθύνσεις",
+    "default_address_user": "ΠΡΟΕΠΙΛΟΓΗ ΔΙΕΥΘΥΝΣΗ",
+    "set_default_address_user": "Ορισμός ως προεπιλεγμένη διεύθυνση"
 }
