--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -3917,7 +3917,7 @@
     "selected_all": "выбрано все",
     "set_temp_error": "Установленная температура не может быть достигнута. Пожалуйста, измените температуру воды.",
     "no_device_support_eco_key": "Нет доступных устройств, пожалуйста, убедитесь, что ваши устройства подключены и поддерживают режим ECO.",
-    "appliance_disconnect_cannot_open_eco": "Устройство отключено, пожалуйста, проверьте, включены ли WiFi и дистанционное управление.",
+    "appliance_disconnect_cannot_open_eco": "Устройство отключено, проверьте, включены ли Wi-Fi и дистанционное управление.",
     "power_on_remote_eabled_tips": "Доступно только при включенном устройстве и включенном дистанционном запуске.",
     "power_on_tips": "Доступно только при включенном устройстве.",
     "asko_oven_on_during_on": "ВКЛ во время использования",
@@ -4149,5 +4149,46 @@
     "CL_DV_HOB_refresh_mode": "Режим обновления",
     "hob_induction3_new_tips": "Узнайте, как подключить умную посуду и просмотреть широкий спектр пошаговых рецептов, специально созданных для приготовления блюд с точным соблюдением температуры.",
     "CL_DV_OV_added_successfully": "Успешно добавлено!",
-    "add_routine": "ДОБАВИТЬ ПРОЦЕДУРУ"
+    "add_routine": "ДОБАВИТЬ ПРОЦЕДУРУ",
+    "CL_DV_PIND_update_blue_tooth": "Убедитесь, что Bluetooth включен.",
+    "CL_DV_PIND_accessory_firmware_update": "Обновление прошивки аксессуара",
+    "CL_CF_CS_ble_scan_not_list": "Если вашего устройства нет в списке, вы можете нажать «ПОПРОБОВАТЬ ЕЩЕ РАЗ», чтобы повторить поиск, или нажать «ДАЛЕЕ», чтобы настроить сеть другим способом.",
+    "CL_CF_CS_ble_scan_have_not_found": "Мы не нашли ни одного устройства Bluetooth. Вы можете нажать «ПОВТОРИТЬ ПОПРОБОВКУ», чтобы повторить поиск, или нажать «ДАЛЕЕ», чтобы настроить сеть другим способом.",
+    "CL_DV_WM_pump_cleaning": "Очистка насоса...",
+    "CL_DV_WM_autodoes_tip": "Включите эту функцию, и ваше устройство будет автоматически дозировать моющее средство и кондиционер для белья, пока вы стираете.",
+    "CL_DV_WM_detergent_department_key": "ОТСЕК ДЛЯ МОЮЩЕГО СРЕДСТВА",
+    "CL_DV_WM_Dosage_Amount_key": "Дозировка Количество",
+    "CL_DV_WM_softener_department_key": "ОТДЕЛЕНИЕ ДЛЯ СМЯГЧИТЕЛЯ",
+    "CL_DV_WM_auto_does_with_detergent": "Автодозировка с моющим средством",
+    "CL_DV_WM_same_detergent": "Тот же моющий препарат",
+    "CL_DV_WM_normal_dosage_weight_tip": "Обычная дозировка: 4~5 кг веса одежды.",
+    "CL_DV_WM_pump_clean_note_1": "Примечания: Если вы хотите изменить содержимое дозируемого компонента, пожалуйста, не забудьте ",
+    "CL_DV_WM_pump_clean_note_2": "Сначала очистите компонент.",
+    "CL_DV_WM_Pump_clean_key": "Чистый насос",
+    "CL_DV_WM_pump_clean_how_to_use": "Как использовать?",
+    "CL_DV_WM_pump_clean_how_to_use_1": "1. Перед активацией функции очистки насоса опорожните и заполните отсек водой.",
+    "CL_DV_WM_pump_clean_how_to_use_2": "2. Активируйте функцию очистки насоса со стороны машины.",
+    "CL_DV_WM_pump_clean_when_to_use": "Когда использовать?",
+    "CL_DV_WM_pump_clean_when_to_use_1": "1. Если вы хотите заменить содержимое в отсеке «Умягчитель», убедитесь, что он пуст, и запустите функцию очистки насоса перед следующим использованием. ",
+    "CL_DV_WM_pump_clean_when_to_use_2": "2. Если вы не чистили насос более полугода, вы можете активировать функцию очистки насоса.",
+    "CL_DV_WM_standard_auto_does_key": "СТАНДАРТНАЯ АВТОДОЗА",
+    "CL_DV_WM_compartment_in_use_key": "ОТСЕК В ИСПОЛЬЗОВАНИИ",
+    "CL_CF_CS_oven_g_800_cs_1": "Переведите устройство в нормальные условия эксплуатации.\n Нажмите значок меню.",
+    "CL_CF_CS_oven_g_800_cs_2": "Нажмите и удерживайте значок Wi-Fi примерно 3–6 секунд, пока он не достигнет буквы «C» на временной шкале.",
+    "CL_CF_CS_oven_g_800_cs_3": "Теперь сеть устройства открыта для подключения в течение 5 минут.\n Нажмите ДАЛЕЕ, чтобы продолжить.",
+    "CL_CF_CS_oven_g_800_p_1": "Переведите устройство в нормальные условия эксплуатации.\n Нажмите значок меню.",
+    "CL_CF_CS_oven_g_800_p_2": "Нажмите и удерживайте значок Wi-Fi примерно 6–9 секунд, пока он не достигнет буквы «P» на временной шкале.",
+    "CL_CF_CS_oven_g_800_p_3": "Теперь устройство готово к сопряжению в течение 3 минут.\n Нажмите ДАЛЕЕ, чтобы продолжить.",
+    "CL_DV_PIND_update_fail_tip1": "Произошла непредвиденная ошибка. Обновление прошивки не удалось.",
+    "CL_DV_PIND_update_fail_tip4": "Попробуйте еще раз обновить аксессуар.",
+    "CL_DV_PIND_update_fail_tip2": "Во время обновления держите свои устройства под рукой.",
+    "CL_DV_PIND_update_fail_tip3": "Проверьте соединение Bluetooth.",
+    "room_good_content": "Состояние воздуха в этой комнате хорошее. Оптимизация пока не требуется.",
+    "edit_address_title": "ИЗМЕНИТЬ АДРЕС",
+    "edit_profile_title": "ИЗМЕНИТЬ ПРОФИЛЬ ПОЛЬЗОВАТЕЛЯ",
+    "CL_DV_OV_reduce_moisture": "Уменьшить влажность",
+    "air_care_level_tips": "Стандарт оценки температуры: Хорошо: 17 < T < 27℃ Нормально: 10≤T≤17℃, 27≤T≤30℃ Нехорошо: T＜10℃ T＞30℃ Стандарт оценки влажности: Хорошо: H < 70% Нормально: 30≤H≤40%, 70≤H≤80% Нехорошо: H＜30%, H＞80%",
+    "addresses_key": "адреса",
+    "default_address_user": "АДРЕС ПО УМОЛЧАНИЮ",
+    "set_default_address_user": "Установить как адрес по умолчанию"
 }
